5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4184/executions/1679_1100.log
== TEST (2019-04-25 17:20:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("entradas:" , a)

if (a==2):
	print("animal: tartaruga")
elif (b==5):
	print("animal: garça")
elif (c==10):
	print("animal: arara")
elif (d==20):
	print("animal: Mico-leão-dourado")
elif (e==50):
	print("animal: Onça-pintada")
elif (f==100):
	print("animal: Garoupa")
else:
	print("animal: ivalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    elif (b==5):
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:21:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("entradas:" , a)

if (a==2):
	print("animal: tartaruga")
elif (a==5):
	print("animal: garça")
elif (a==10):
	print("animal: arara")
elif (a==20):
	print("animal: Mico-leão-dourado")
elif (a==50):
	print("animal: Onça-pintada")
elif (a==100):
	print("animal: Garoupa")
else:
	print("animal: ivalido")
-- OUTPUT:
entradas: 100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:21:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("entradas:" , a)

if (a==2):
	print("animal: tartaruga")
elif (a==5):
	print("animal: garça")
elif (a==10):
	print("animal: arara")
elif (a==20):
	print("animal: Mico-leao-dourado")
elif (a==50):
	print("animal: Onça-pintada")
elif (a==100):
	print("animal: Garoupa")
else:
	print("animal: ivalido")
-- OUTPUT:
entradas: 100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:21:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("entradas:" , a)

if (a==2):
	print("animal: tartaruga")
elif (a==5):
	print("animal: garça")
elif (a==10):
	print("animal: arara")
elif (a==20):
	print("animal: Mico-leao-dourado")
elif (a==50):
	print("animal: Onça-pintada")
elif (a==100):
	print("animal: Garoupa")
else:
	print("animal: ivalido")
-- EXECUTION TIME:
0.133092
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
entradas: 100
animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
entradas: 7
animal: ivalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
entradas: 50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:22:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("entradas:" , a)

if (a==2):
	print("animal: tartaruga")
elif (a==5):
	print("animal: garça")
elif (a==10):
	print("animal: arara")
elif (a==20):
	print("animal: Mico-leao-dourado")
elif (a==50):
	print("animal: Onça-pintada")
elif (a==100):
	print("animal: Garoupa")
else:
	print("animal: ivalido")
-- OUTPUT:
entradas: 100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:22:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("animal: tartaruga")
elif (a==5):
	print("animal: garça")
elif (a==10):
	print("animal: arara")
elif (a==20):
	print("animal: Mico-leao-dourado")
elif (a==50):
	print("animal: Onça-pintada")
elif (a==100):
	print("animal: Garoupa")
else:
	print("animal: ivalido")
-- OUTPUT:
Entradas: 100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:22:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("animal: tartaruga")
elif (a==5):
	print("animal: garça")
elif (a==10):
	print("animal: arara")
elif (a==20):
	print("animal: Mico-leao-dourado")
elif (a==50):
	print("animal: Onça-pintada")
elif (a==100):
	print("animal: Garoupa")
else:
	print("animal: ivalido")
-- EXECUTION TIME:
0.150343
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entradas: 100
animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entradas: 7
animal: ivalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entradas: 50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:22:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: tartaruga")
elif (a==5):
	print("Animal: garça")
elif (a==10):
	print("Animal: arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onça-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: ivalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:23:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: tartaruga")
elif (a==5):
	print("Animal: garça")
elif (a==10):
	print("Animal: arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onça-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: ivalido")
-- EXECUTION TIME:
0.202302
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entradas: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entradas: 7
Animal: ivalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entradas: 50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:23:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: tartaruga")
elif (a==5):
	print("Animal: garça")
elif (a==10):
	print("Animal: arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onça-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: ivalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:24:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: tartaruga")
elif (a==5):
	print("Animal: garça")
elif (a==10):
	print("Animal: arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onça-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: ivalido")
-- EXECUTION TIME:
0.17246
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entradas: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entradas: 7
Animal: ivalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entradas: 50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:24:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: tartaruga")
elif (a==5):
	print("Animal: garça")
elif (a==10):
	print("Animal: arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onça-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:24:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: tartaruga")
elif (a==5):
	print("Animal: garça")
elif (a==10):
	print("Animal: arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onça-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- EXECUTION TIME:
0.211196
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entradas: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entradas: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entradas: 50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:25:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: tartaruga")
elif (a==5):
	print("Animal: garça")
elif (a==10):
	print("Animal: arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onça-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:25:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: tartaruga")
elif (a==5):
	print("Animal: garça")
elif (a==10):
	print("Animal: arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onça-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- EXECUTION TIME:
0.134144
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entradas: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entradas: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entradas: 50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:25:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: tartaruga")
elif (a==5):
	print("Animal: garça")
elif (a==10):
	print("Animal: arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onça-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:25:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: tartaruga")
elif (a==5):
	print("Animal: garça")
elif (a==10):
	print("Animal: arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onça-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:25:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: tartaruga")
elif (a==5):
	print("Animal: garça")
elif (a==10):
	print("Animal: arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onça-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:25:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: tartaruga")
elif (a==5):
	print("Animal: garça")
elif (a==10):
	print("Animal: arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onça-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:26:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: tartaruga")
elif (a==5):
	print("Animal: garça")
elif (a==10):
	print("Animal: arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:26:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: tartaruga")
elif (a==5):
	print("Animal: garça")
elif (a==10):
	print("Animal: arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:26:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: tartaruga")
elif (a==5):
	print("Animal: garça")
elif (a==10):
	print("Animal: arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:26:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: tartaruga")
elif (a==5):
	print("Animal: garça")
elif (a==10):
	print("Animal: arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:26:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: tartaruga")
elif (a==5):
	print("Animal: garça")
elif (a==10):
	print("Animal: arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- EXECUTION TIME:
0.204334
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entradas: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entradas: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entradas: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:27:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: tartaruga")
elif (a==5):
	print("Animal: garça")
elif (a==10):
	print("Animal: arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:27:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: tartaruga")
elif (a==5):
	print("Animal: garça")
elif (a==10):
	print("Animal: arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:28:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:28:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- EXECUTION TIME:
0.134319
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entradas: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entradas: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entradas: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:28:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:28:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:28:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.139469
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entradas: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entradas: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entradas: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:29:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:29:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:29:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:29:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:29:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:29:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:30:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:30:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.210846
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entradas: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entradas: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entradas: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:30:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" , a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:31:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:",a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:31:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:",a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.114701
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entradas: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entradas: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entradas: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:31:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" ,a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:31:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a = int(input("especie: "))
print("Entradas:" ,a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.159179
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entradas: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entradas: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entradas: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:32:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a=int(input("especie: "))
print("Entradas:" ,a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:33:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a=int(input("especie: "))
print("Entradas:" ,a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.123174
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entradas: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entradas: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entradas: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:33:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a=int(input("especie: "))
print("Entradas:" ,a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:33:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a=int(input("especie: "))
print("Entradas:" ,a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.175866
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entradas: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entradas: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
especie: Entradas: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:34:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a=int(input("especie: "))
print("Entradas:" ,a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garça")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:34:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a=int(input("especie: "))
print("Entradas:" ,a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garça")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.123718
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entradas: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entradas: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entradas: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:35:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a=int(input("especie: "))
print("Entradas:" ,a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:35:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a=int(input("especie: "))
print("Entradas:" ,a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:35:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a=int(input("especie: "))
print("Entradas:" ,a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:35:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a=int(input("especie: "))
print("Entradas:" ,a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:35:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a=int(input("especie: "))
print("Entradas:" ,a)

if (a==2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif (a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal: Mico-leao-dourado")
elif (a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:36:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a=int(input("especie: "))
print("Entradas:" ,a)

if (a == 2):
	print("Animal: Tartaruga")
elif (a == 5):
	print("Animal: Garca")
elif (a == 10):
	print("Animal: Arara")
elif (a == 20):
	print("Animal: Mico-leao-dourado")
elif (a == 50):
	print("Animal: Onca-pintada")
elif (a == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:36:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a=int(input("especie: "))
print("Entradas:" ,a)

if (a == 2):
	print("Animal: Tartaruga")
elif (a == 5):
	print("Animal: Garca")
elif (a == 10):
	print("Animal: Arara")
elif (a == 20):
	print("Animal: Mico-leao-dourado")
elif (a == 50):
	print("Animal: Onca-pintada")
elif (a == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.198793
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entradas: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entradas: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entradas: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:37:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a=int(input("especie: "))
print("Entradas:" ,a)

if (a == 2):
	print("Animal: Tartaruga")
elif (a == 5):
	print("Animal: Garca")
elif (a == 10):
	print("Animal: Arara")
elif (a == 20):
	print("Animal: Mico-leão-dourado")
elif (a == 50):
	print("Animal: Onca-pintada")
elif (a == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:39:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a=int(input("especie: "))
print("Entradas:" ,a)

if (a == 2):
	print("Animal: Tartaruga")
elif (a == 5):
	print("Animal: Garca")
elif (a == 10):
	print("Animal: Arara")
elif (a == 20):
	print("Animal: Mico-leao-dourado")
elif (a == 50):
	print("Animal: Onca-pintada")
elif (a == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:39:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a=int(input("especie: "))
print("Entradas:" ,a)

if (a == 2):
	print("Animal: Tartaruga")
elif (a == 5):
	print("Animal: Garca")
elif (a == 10):
	print("Animal: Arara")
elif (a == 20):
	print("Animal: Mico-leao-dourado")
elif (a == 50):
	print("Animal: Onca-pintada")
elif (a == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.166628
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entradas: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entradas: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entradas: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:39:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a=int(input("especie: "))
print("Entradas:" ,a)

if  (a == 2):
	print("Animal: Tartaruga")
elif (a == 5):
	print("Animal: Garca")
elif (a == 10):
	print("Animal: Arara")
elif (a == 20):
	print("Animal: Mico-leao-dourado")
elif (a == 50):
	print("Animal: Onca-pintada")
elif (a == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:39:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a=int(input("especie: "))
print("Entradas:" ,a)

if  (a == 2):
	print("Animal: Tartaruga")
elif (a == 5):
	print("Animal: Garca")
elif (a == 10):
	print("Animal: Arara")
elif (a == 20):
	print("Animal: Mico-leao-dourado")
elif (a == 50):
	print("Animal: Onca-pintada")
elif (a == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.142591
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entradas: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entradas: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entradas: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:41:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a=int(input("especie: "))
print("Entradas:" ,a)

if (a == 2):
	print("Animal: Tartaruga")
elif (a == 5):
	print("Animal: Garça")
elif (a == 10):
	print("Animal: Arara")
elif (a == 20):
	print("Animal: Mico-leao-dourado")
elif (a == 50):
	print("Animal: Onça-pintada")
elif (a == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:41:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a=int(input("especie: "))
print("Entradas:" ,a)

if (a == 2):
	print("Animal: Tartaruga")
elif (a == 5):
	print("Animal: Garça")
elif (a == 10):
	print("Animal: Arara")
elif (a == 20):
	print("Animal: Mico-leao-dourado")
elif (a == 50):
	print("Animal: Onça-pintada")
elif (a == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.181546
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entradas: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entradas: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entradas: 50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:42:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a=int(input("FDPPPPPPPPP: "))
print("Entradas:" ,a)

if (a == 2):
	print("Animal: Tartaruga")
elif (a == 5):
	print("Animal: Garça")
elif (a == 10):
	print("Animal: Arara")
elif (a == 20):
	print("Animal: Mico-leao-dourado")
elif (a == 50):
	print("Animal: Onça-pintada")
elif (a == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:42:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a=int(input("FDPPPPPPPPP: "))
print("Entradas:" ,a)

if (a == 2):
	print("Animal: Tartaruga")
elif (a == 5):
	print("Animal: Garça")
elif (a == 10):
	print("Animal: Arara")
elif (a == 20):
	print("Animal: Mico-leao-dourado")
elif (a == 50):
	print("Animal: Onça-pintada")
elif (a == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.189499
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entradas: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entradas: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entradas: 50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:42:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a=int(input("FDPPPPPPPPP: "))
print("Entrada:" ,a)

if (a == 2):
	print("Animal: Tartaruga")
elif (a == 5):
	print("Animal: Garça")
elif (a == 10):
	print("Animal: Arara")
elif (a == 20):
	print("Animal: Mico-leao-dourado")
elif (a == 50):
	print("Animal: Onça-pintada")
elif (a == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:42:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a=int(input("FDPPPPPPPPP: "))
print("Entrada:" ,a)

if (a == 2):
	print("Animal: Tartaruga")
elif (a == 5):
	print("Animal: Garça")
elif (a == 10):
	print("Animal: Arara")
elif (a == 20):
	print("Animal: Mico-leao-dourado")
elif (a == 50):
	print("Animal: Onça-pintada")
elif (a == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.209077
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:43:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a=int(input("FDPPPPPPPPP: "))
print("Entrada:" ,a)

if (a == 2):
	print("Animal: Tartaruga")
elif (a == 5):
	print("Animal: GarCa")
elif (a == 10):
	print("Animal: Arara")
elif (a == 20):
	print("Animal: Mico-leao-dourado")
elif (a == 50):
	print("Animal: OnCa-pintada")
elif (a == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:44:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a=int(input("FDPPPPPPPPP: "))
print("Entrada:" ,a)

if (a == 2):
	print("Animal: Tartaruga")
elif (a == 5):
	print("Animal: Garca")
elif (a == 10):
	print("Animal: Arara")
elif (a == 20):
	print("Animal: Mico-leao-dourado")
elif (a == 50):
	print("Animal: Onca-pintada")
elif (a == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:44:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de e
a=int(input("FDPPPPPPPPP: "))
print("Entrada:" ,a)

if (a == 2):
	print("Animal: Tartaruga")
elif (a == 5):
	print("Animal: Garca")
elif (a == 10):
	print("Animal: Arara")
elif (a == 20):
	print("Animal: Mico-leao-dourado")
elif (a == 50):
	print("Animal: Onca-pintada")
elif (a == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.176511
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
